--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "gunkmaps",
   "private": true,
   "type": "module",
   "scripts": {
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "nuxt": "^3.14.159",
+    "tailwindcss": "^3.4.14",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.13.4",
+    "@nuxt/ui": "^2.19.2",
+    "@nuxtjs/seo": "2.0.0-rc.23",
     "@nuxtjs/tailwindcss": "^6.12.2"
   }
 }
