--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/leaflet": "^1.2.4",
+    "leaflet": "^1.9.4",
     "nuxt": "^3.14.159",
-    "tailwindcss": "^3.4.14",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@nuxt/content": "^2.13.4",
     "@nuxt/ui": "^2.19.2",
-    "@nuxtjs/seo": "2.0.0-rc.23",
-    "@nuxtjs/tailwindcss": "^6.12.2"
+    "@nuxtjs/seo": "2.0.0-rc.23"
   }
 }
