Laying Foundation for vercel
Created needed files for vercel to use later on when we implement user posting

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nuxtjs/leaflet": "^1.2.4",
+    "@vercel/blob": "^0.27.1",
     "leaflet": "^1.9.4",
     "nuxt": "^3.14.159",
     "vue": "latest",
