dependency update, nuxt content v3

--- a/content/csb/.info.yml
+++ b/content/csb/.info.yml
@@ -1,4 +1,4 @@
----
 title: 'CSB (Coykendall Science Building) '
 description: 'Home of Science classes and really long hallways.'
----
+coords: [41.742363, -74.083466]
+path: 'csb'
