--- a/content/lc/.info.yml
+++ b/content/lc/.info.yml
@@ -1,4 +1,4 @@
----
 title: 'Lecture Center'
 description: 'Awesome building with a creepy ahh basement'
----
+coords: [41.742673, -74.084128]
+path: 'lc'
