--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/leaflet": "^1.2.4",
+    "@nuxt/content": "^3.2.1",
+    "@nuxtjs/leaflet": "^1.2.6",
+    "@nuxtjs/seo": "2.2.0",
     "leaflet": "^1.9.4",
-    "nuxt": "^3.14.159",
+    "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
-    "@nuxt/content": "^2.13.4",
-    "@nuxt/ui": "^2.19.2",
-    "@nuxtjs/seo": "2.0.0-rc.23"
+    "@nuxt/ui": "^2.21.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@parcel/watcher",
+      "better-sqlite3",
+      "esbuild",
+      "vue-demi"
+    ]
   }
 }
